# geographic_conversion

./: CMakeLists.txt  README.md  dependency.repos  package.xml
.github/workflows/: BuildTest.yaml  ROS2-Eloquent.yml  ROS2-Foxy.yaml  ROS2-Galactic.yaml
include/geographic_conversion/: fix_converter.h  fix_converter_component.hpp  geographic_conversion_server.h  geopath_converter.h  geopath_converter.hpp  geopath_converter_component.hpp  geopose_converter.h  geopose_converter.hpp  geopose_converter_component.hpp
launch/: fix_conversion.launch  geographic_conversion.launch  geographic_conversion_server.launch  geopath_conversion.launch  geopose_conversion.launch
src/: fix_converter.cpp  fix_converter_component.cpp  fix_converter_node.cpp  geographic_conversion_server.cpp  geographic_conversion_server_node.cpp  geopath_converter.cpp  geopath_converter_component.cpp  geopath_converter_node.cpp  geopose_converter.cpp  geopose_converter_component.cpp  geopose_converter_node.cpp
srv/: GeoPointToPoint.srv  PointToGeoPoint.srv
