<?xml version="1.0"?>
<package format="2">
  <name>geographic_conversion</name>
  <version>0.0.0</version>
  <description>The geographic_conversion package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
